feat: update java  central repository (#62)
* feat: update java  central repository

* feat: update developer name

* feat: update artifactid

* feat: update module name

* fix: replace HybridSE

* refactor: rename package name

* refactor: rename sql-native package name

* fix: import hybridsql package

* fix: rm checkstyle action

* refactor: rename package name

* fix: update package name

Co-authored-by: deng <deng@dengdeMacBook-Pro.local>

--- a/src/sdk/java/pom.xml
+++ b/src/sdk/java/pom.xml
@@ -3,18 +3,42 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com._4paradigm.sql</groupId>
-    <artifactId>sql-sdk</artifactId>
-    <version>2.2.0</version>
+    <groupId>com.4paradigm.hybridsql</groupId>
+    <artifactId>fedb-sdk</artifactId>
+    <version>2.2.0-SNAPSHOT</version>
     <modules>
            <module>sql-jdbc</module>
            <module>sql-native</module>
     </modules>
     <packaging>pom</packaging>
-    <name>sdk</name>
+    <name>fedb-sdk</name>
+    <description>A NewSQL database optimised for online inferencing and decision making applications.</description>
+    <url>https://github.com/4paradigm/fedb</url>
+     <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+    <developers>
+        <developer>
+            <id>dl239</id>
+            <name>jeremy</name>
+            <email>denglong@4paradigm.com</email>
+            <url>https://github.com/dl239</url>
+            <organization>4Paradigm</organization>
+            <organizationUrl>https://www.4paradigm.com/</organizationUrl>
+        </developer>
+    </developers>
+    <scm>
+        <connection>scm:git@github.com:4paradigm/fedb.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com:4paradigm/fedb.git</developerConnection>
+        <tag>HEAD</tag>
+        <url>https://github.com/4paradigm/fedb</url>
+    </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <hybridse.version>0.1.0-SNAPSHOT</hybridse.version>
     </properties>
     <build>
         <pluginManagement>
@@ -57,6 +81,63 @@
                         </execution>
                     </executions>
                 </plugin>
+                <!-- For deploying in central repository -->
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-gpg-plugin</artifactId>
+                    <version>1.5</version>
+                    <executions>
+                        <execution>
+                            <id>sign-artifacts</id>
+                            <phase>verify</phase>
+                            <goals>
+                                <goal>sign</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.sonatype.plugins</groupId>
+                    <artifactId>nexus-staging-maven-plugin</artifactId>
+                    <version>1.6.7</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <serverId>ossrh</serverId>
+                        <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                        <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <version>2.4.2</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-source-plugin</artifactId>
+                    <version>2.2.1</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <goals>
+                                <goal>jar-no-fork</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-javadoc-plugin</artifactId>
+                    <version>2.9.1</version>
+                    <executions>
+                        <execution>
+                            <id>attach-javadocs</id>
+                            <goals>
+                                <goal>jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -65,14 +146,37 @@
 
   <distributionManagement>
     <snapshotRepository>
-        <id>file-repository</id>
-        <url>file:///tmp/hybridse_java_packages/</url>
+        <id>ossrh</id>
+        <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
     <repository>
-        <id>file-repository</id>
-        <url>file:///tmp/hybridse_java_packages/</url>
+        <id>ossrh</id>
+        <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
   </distributionManagement>
 
- </project>
-
+  <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>3.1.2</version>
+                <reportSets>
+                    <reportSet>
+                        <reports>
+                            <report>checkstyle</report>
+                        </reports>
+                    </reportSet>
+                </reportSets>
+                <configuration>
+                    <configLocation>style_checks.xml</configLocation>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.github.spotbugs</groupId>
+                <artifactId>spotbugs-maven-plugin</artifactId>
+                <version>4.2.2</version>
+            </plugin>
+        </plugins>
+    </reporting>
+</project>
