--- a/src/sdk/java/sql-native/pom.xml
+++ b/src/sdk/java/sql-native/pom.xml
@@ -3,16 +3,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <parent>
-        <artifactId>sql-sdk</artifactId>
-        <groupId>com._4paradigm.sql</groupId>
-            <version>2.2.0</version>
+        <artifactId>fedb-sdk</artifactId>
+        <groupId>com.4paradigm.hybridsql</groupId>
+            <version>2.2.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>sql-native</artifactId>
+    <artifactId>fedb-native</artifactId>
     <packaging>jar</packaging>
-    <name>sql-native</name>
-    <version>2.2.0</version>
+    <name>fedb-native</name>
+    <version>2.2.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
