ci: fix workflow (#76)
* ci: fix needs name erro

* ci: fix docker action

* ci: fix bad revision 'HEAD~1'

* ci: fix bad revision 'HEAD~1'

* fix: boost download url broken

* fix: install_deps.sh

* fix: 'cmake' typo

* fix: typo

* ci: support release darwin asserts

* ci: fix env variable, $GITHUB_ENV is updated for next step at least

* ci: fix upload file name

* ci: fix path name

* ci: upload lib artifacts

* ci: filter uploaded lib

* build: update java package version, default with a '-SNAPSHOT' suffix

* ci: rm 'draft' option for release

* build: update java library version to x.x.x-SNAPSHOT style

* build: enable maven deploy plugins by default

* build: publish java library

* build: use actions/setup-java, as it will setup settings.xml for maven deploy

* build: tweak setup-java's server-id

* build: yaml syntax fix

* build: fix java deeply

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -26,14 +26,14 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Build image
         working-directory: docker
         run: |
           if [[ ${{ github.ref }} == "refs/heads/main" ]]; then
-            git diff --name-only HEAD HEAD~1 -- | grep --regexp "^docker/\(.+/\)*\(Dockerfile\|.*\.sh\)\$" || \
-                                                                 # no file change to docker folder
-                                                                 exit 0
+            git diff --name-only HEAD~1 HEAD -- | grep --regexp "^docker/\(.+/\)*\(Dockerfile\|.*\.sh\)\$" || exit 0
           fi
           docker build --no-cache . --file Dockerfile --tag $IMAGE_NAME
 
@@ -41,9 +41,7 @@ jobs:
         if: ${{ github.event_name == 'push' }}
         run: |
           if [[ ${{ github.ref }} == "refs/heads/main" ]]; then
-            git diff --name-only HEAD HEAD~1 -- | grep --regexp "^docker/\(.+/\)*\(Dockerfile\|.*\.sh\)\$" || \
-                                                                 # no file change to docker folder
-                                                                 exit 0
+            git diff --name-only HEAD~1 HEAD -- | grep --regexp "^docker/\(.+/\)*\(Dockerfile\|.*\.sh\)\$" || exit 0
           fi
 
           IMAGE_ID=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
