--- a/.github/workflows/hybridse-ci.yml
+++ b/.github/workflows/hybridse-ci.yml
@@ -13,11 +13,21 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/4paradigm/hybridsql:latest
-
+    env:
+      OS: linux
+      ARCH: x86_64
     steps:
       - uses: actions/checkout@v2
         with:
           submodules: true
+
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '8'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_TOKEN
 
       - name: Build Core
         run: |
@@ -48,32 +58,39 @@ jobs:
           path: |
             java/hybridse-sdk/target/**/TEST-*.xml
 
+      - name: Upload jsdk
+        if: ${{ github.event_name == 'push' }}
+        uses: actions/upload-artifact@v2
+        with:
+          path: build/src/sdk/libhybridse*.so
+          name: lib-artifacts
+
+      - name: Publish Java Library
+        if: ${{ github.event_name == 'push' }}
+        working-directory: java
+        run: |
+          mvn --batch-mode deploy
+        env:
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_TOKEN: ${{ secrets.OSSRH_TOKEN }}
+
       - name: Create Archive
         if: ${{ github.event_name == 'push' }}
-        env:
-          OS: linux
-          ARCH: x86_64
         run: |
           if [[ "${{ github.ref }}" == "refs/tags/v"* ]]; then
             VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
             VERSION=$(echo $VERSION | sed -e 's/^v//')
-            echo "HYBRIDSE_VERSION=$VERSION" >> $GITHUB_ENV
             HYBRIDSE_VERSION=$VERSION ./tools/hybridse_deploy.sh
           else
-            # TODO: upload using action/upload-artifact
             ./tools/hybridse_deploy.sh
           fi
 
-      - name: Release
-        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
-        uses: softprops/action-gh-release@v1
+      - name: Upload Artifacts
+        if: ${{ github.event_name == 'push' }}
+        uses: actions/upload-artifact@v2
         with:
-          # TODO: add CHANGELOG.md and remove draft option
-          draft: true
-          files: |
-            hybridse-${{ env.HYBRIDSE_VERSION }}-*.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          path: hybridse-*-${{ env.OS }}-${{ env.ARCH }}.tar.gz
+          name: release-artifacts
 
   macos-build:
     name: Build in MacOS
@@ -81,14 +98,18 @@ jobs:
     env:
       CICD_RUNNER_THIRDPARTY_PATH: /Users/runner/thirdparty
       CICD_RUNNER_THIRDSRC_PATH: /Users/runner/thirdsrc
+      OS: darwin
+      ARCH: x86_64
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
+      - uses: actions/setup-java@v2
         with:
-          java-version: "8"
-          distribution: "adopt"
+          distribution: 'adopt'
+          java-version: '8'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_TOKEN
 
       - name: Install thirdparty
         run: |
@@ -128,9 +149,111 @@ jobs:
           path: |
             java/hybridse-sdk/target/**/TEST-*.xml
 
+      - name: Upload jsdk
+        if: ${{ github.event_name == 'push' }}
+        uses: actions/upload-artifact@v2
+        with:
+          path: build/src/sdk/libhybridse*.dylib
+          name: lib-artifacts
+
+      - name: Publish Java Library
+        if: ${{ github.event_name == 'push' }}
+        working-directory: java
+        run: |
+          mvn --batch-mode deploy -P macos
+        env:
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_TOKEN: ${{ secrets.OSSRH_TOKEN }}
+
+      - name: Create Archive
+        if: ${{ github.event_name == 'push' }}
+        run: |
+          if [[ "${{ github.ref }}" == "refs/tags/v"* ]]; then
+            VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+            VERSION=$(echo $VERSION | sed -e 's/^v//')
+            HYBRIDSE_VERSION=$VERSION ./tools/hybridse_deploy.sh
+          else
+            ./tools/hybridse_deploy.sh
+          fi
+
+      - name: Upload Artifacts
+        if: ${{ github.event_name == 'push' }}
+        uses: actions/upload-artifact@v2
+        with:
+          path: hybridse-*-${{ env.OS }}-${{ env.ARCH }}.tar.gz
+          name: release-artifacts
+
+  java-allinone-deploy:
+    runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/4paradigm/hybridsql:latest
+    needs: ["macos-build"]
+    if: >
+      success() && github.event_name == 'push'
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+
+      - name: Download Lib Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: lib-artifacts
+
+      - uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+          java-version: '8'
+          server-id: ossrh
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_TOKEN
+
+      - name: Build Core
+        run: |
+          ./tools/hybridse_build.sh
+
+      - name: Copy Dylib
+        run: |
+          cp libhybridse_*.dylib java/hybridse-native/src/main/resources/
+
+      - name: Publish Java Library
+        working-directory: java
+        run: |
+          mvn --batch-mode deploy -P allinone
+        env:
+          MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
+          MAVEN_TOKEN: ${{ secrets.OSSRH_TOKEN }}
+
+  release:
+    runs-on: ubuntu-latest
+    needs: ["linux-build", "macos-build"]
+    if: >
+      success() && startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - name: Download Release Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: release-artifacts
+
+      - name: Download Lib Artifacts
+        uses: actions/download-artifact@v2
+        with:
+          name: lib-artifacts
+
+      - name: Release
+        if: ${{ startsWith(github.ref, 'refs/tags/v') }}
+        uses: softprops/action-gh-release@v1
+        with:
+          files: |
+            hybridse-*.tar.gz
+            *.so
+            *.dylib
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   publish-test-results:
     runs-on: ubuntu-latest
-    needs: ["linux-build", "mac-build"]
+    needs: ["linux-build", "macos-build"]
     # the action will only run on 4paradigm/HybridSE's context, not for fork repo or dependabot
     if: >
       always() && github.event_name == 'push' || (
