--- a/java/hybridse-proto/pom.xml
+++ b/java/hybridse-proto/pom.xml
@@ -4,14 +4,14 @@
 	<parent>
 		<artifactId>hybridse-java</artifactId>
 		<groupId>com.4paradigm.hybridse</groupId>
-        <version>0.1.3</version>
+        <version>0.1.3-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>hybridse-proto</artifactId>
 	<packaging>jar</packaging>
 	<name>hybridse-proto</name>
-	<version>0.1.3</version>
+    <version>${project.parent.version}</version>
 
     <dependencies>
         <dependency>
