build: bump java library to 0.1.3 (#85)
* build: bump java library to 0.1.3

* style: format pom.xml

* build: enable gpg sign for release

* ci: avoid java library twice

maven central do not allow updating release

* ci: deploy java lib with gpg sign enabled

* build: config gpg sign plugin

https://github.com/actions/setup-java/issues/83

* revert: disable gpg sign

--- a/java/hybridse-native/pom.xml
+++ b/java/hybridse-native/pom.xml
@@ -3,16 +3,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<parent>
-		<artifactId>hybridse-java</artifactId>
-		<groupId>com.4paradigm.hybridse</groupId>
-        <version>0.1.3-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
+        <artifactId>hybridse-java</artifactId>
+        <groupId>com.4paradigm.hybridse</groupId>
+        <version>0.1.3</version>
+        <relativePath>../pom.xml</relativePath>
 	</parent>
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>hybridse-native</artifactId>
-	<packaging>jar</packaging>
-	<name>hybridse-native</name>
-	<version>${versionFromProfile}</version>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>hybridse-native</artifactId>
+    <packaging>jar</packaging>
+    <name>hybridse-native</name>
+    <version>${versionFromProfile}</version>
 
 	<profiles>
 		<profile>
