--- a/java/hybridse-proto/pom.xml
+++ b/java/hybridse-proto/pom.xml
@@ -1,16 +1,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<parent>
-		<artifactId>hybridse-java</artifactId>
-		<groupId>com.4paradigm.hybridse</groupId>
-        <version>0.1.3-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>hybridse-proto</artifactId>
-	<packaging>jar</packaging>
-	<name>hybridse-proto</name>
+    <parent>
+        <artifactId>hybridse-java</artifactId>
+        <groupId>com.4paradigm.hybridse</groupId>
+        <version>0.1.3</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>hybridse-proto</artifactId>
+    <packaging>jar</packaging>
+    <name>hybridse-proto</name>
     <version>${project.parent.version}</version>
 
     <dependencies>
