--- a/java/hybridse-sdk/pom.xml
+++ b/java/hybridse-sdk/pom.xml
@@ -4,16 +4,16 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
 >
 	<parent>
-		<artifactId>hybridse-java</artifactId>
-		<groupId>com.4paradigm.hybridse</groupId>
-        <version>0.1.3-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath>
-	</parent>
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>hybridse-sdk</artifactId>
-	<packaging>jar</packaging>
-	<name>hybridse-sdk</name>
-	<version>${versionFromProfile}</version>
+        <artifactId>hybridse-java</artifactId>
+        <groupId>com.4paradigm.hybridse</groupId>
+        <version>0.1.3</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>hybridse-sdk</artifactId>
+    <packaging>jar</packaging>
+    <name>hybridse-sdk</name>
+    <version>${versionFromProfile}</version>
 
 	<profiles>
 		<profile>
