--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -25,14 +25,14 @@ jobs:
 #        if: always()
 #        run: |
 #          bash steps/sql_sdk_c_ut.sh 0 sql_sdk_test
-      - name: Publish Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1
+      - name: upload Unit Test Results
         if: always()
+        uses: actions/upload-artifact@v2
         with:
-          files: reports/*.xml
-          comment_title: Test Report
-          report_individual_runs: true
-          check_run_annotations: all tests, skipped tests
+          name: linux-ut-result-cpp-${{ github.sha }}
+          path: |
+            reports/*.xml
+
       - name: cleanup
         if: always()
         run: |
@@ -56,14 +56,13 @@ jobs:
       - name: run sql_sdk_test
         run: |
           bash steps/ut.sh sql_sdk_test 0
-      - name: Publish Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1
+      - name: upload Unit Test Results
         if: always()
+        uses: actions/upload-artifact@v2
         with:
-          files: reports/*.xml
-          comment_title: Test Report
-          report_individual_runs: true
-          check_run_annotations: all tests, skipped tests
+          name: linux-ut-result-cpp-${{ github.sha }} # the same name?
+          path: |
+            reports/*.xml
       - name: cleanup
         if: always()
         run: |
@@ -87,16 +86,35 @@ jobs:
       - name: run sql_sdk_test
         run: |
           bash steps/ut.sh sql_cluster_test 0
-      - name: Publish Unit Test Results
-        uses: EnricoMi/publish-unit-test-result-action@v1
+      - name: upload Unit Test Results
         if: always()
+        uses: actions/upload-artifact@v2
         with:
-          files: reports/*.xml
-          comment_title: Test Report
-          report_individual_runs: true
-          check_run_annotations: all tests, skipped tests
+          name: linux-ut-result-cpp-${{ github.sha }}
+          path: |
+            reports/*.xml
       - name: cleanup
         if: always()
         run: |
           source /etc/profile.d/enable-rh.sh
           git clean -dfx
+
+  publish-test-results:
+    runs-on: ubuntu-latest
+    needs: ["cpp_ut", "sql_sdk_test", "sql_cluster_test"]
+    # the action will only run on 4paradigm/fedb's context, not for fork repo or dependabot
+    if: >
+      always() && github.event_name == 'push' || (
+      github.event.pull_request.head.repo.full_name == github.repository &&
+      github.event.sender.login != 'dependabot[bot]' )
+    steps:
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+
+      - name: Publish Linux UT Results
+        uses: EnricoMi/publish-unit-test-result-action@v1
+        with:
+          files: linux-ut-result-*/**/*.xml
+          check_name: Linux Test Report
+          comment_title: Linux Test Report
+          
