--- a/.github/workflows/publish-test-result-from-fork.yml
+++ b/.github/workflows/publish-test-result-from-fork.yml
@@ -3,7 +3,7 @@ name: publish-test-result-from-fork
 on:
   # the action will only run on dependabot/fork pull request
   workflow_run:
-    workflows: ["FEDB CI"]
+    workflows: ["cicd"]
     types:
       - completed
 
