--- a/src/sdk/java/pom.xml
+++ b/src/sdk/java/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.4paradigm.hybridsql</groupId>
     <artifactId>fedb-sdk</artifactId>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.2.0</version>
     <modules>
            <module>sql-jdbc</module>
            <module>sql-native</module>
