--- a/src/sdk/java/sql-native/pom.xml
+++ b/src/sdk/java/sql-native/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>fedb-native</artifactId>
     <packaging>jar</packaging>
     <name>fedb-native</name>
-    <version>${project.parent.version}</version>
+    <version>${versionFromProfile}</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
